<resources>
    <string name="app_name">Madcow</string>
    <string name="lift_height">150dp</string>
    <string name="next_day">Next</string>
    <string name="prev_day">Previous</string>
    <string name="lift_squat">Squat</string>
    <string name="lift_bench">Bench</string>
    <string name="lift_row">Row</string>
    <string name="lift_press">Press</string>
    <string name="lift_deadlift">Deadlift</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
