<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    tools:context="com.example.mattk.madcow.SettingsActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_editor_absoluteY="8dp"
        app:layout_editor_absoluteX="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Starting Lifts"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            app:layout_editor_absoluteY="0dp"
            app:layout_editor_absoluteX="0dp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/squat"
            android:clickable="true"
            android:onClick="setStartingLiftClick"
            android:padding="10dp"
            android:background="@drawable/textlines"
            android:layout_height="50dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="18dp"
                    android:text="@string/lift_squat"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textSize="18dp"
                    android:id="@+id/squat_value"
                    android:text="100"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:background="@drawable/textlines"
            android:padding="10dp"
            android:id="@+id/bench"
            android:clickable="true"
            android:onClick="setStartingLiftClick"
            android:layout_height="50dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lift_bench"
                    android:textSize="18dp"
                    android:layout_alignParentLeft="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:id="@+id/bench_value"
                    android:text="100"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/row"
            android:clickable="true"
            android:onClick="setStartingLiftClick"
            android:padding="10dp"
            android:background="@drawable/textlines"
            android:layout_height="50dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="18dp"
                    android:text="@string/lift_row"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/row_value"
                    android:textSize="18dp"
                    android:text="100"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/press"
            android:clickable="true"
            android:onClick="setStartingLiftClick"
            android:padding="10dp"
            android:background="@drawable/textlines"
            android:layout_height="50dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_alignParentLeft="true"
                    android:text="@string/lift_press"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="100"
                    android:id="@+id/press_value"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/deadlift"
            android:clickable="true"
            android:onClick="setStartingLiftClick"
            android:padding="10dp"
            android:background="@drawable/textlines"
            android:layout_height="50dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="18dp"
                    android:text="@string/lift_deadlift"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:id="@+id/deadlift_value"
                    android:text="100"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/plate"
            android:clickable="true"
            android:onClick="setStartingLiftClick"
            android:padding="10dp"
            android:background="@drawable/textlines"
            android:layout_height="50dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="18dp"
                    android:text="@string/smallest_plate"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:id="@+id/plate_value"
                    android:text="2.5"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
